[gd_scene load_steps=15 format=2]

[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-4.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bingus Assets/sounds/bingus cutscene1.wav" type="AudioStream" id=5]
[ext_resource path="res://Fades/Fadeout.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fades/Fadein.tscn" type="PackedScene" id=7]
[ext_resource path="res://Bingus Assets/graphics/binguscutscene2.png" type="Texture" id=8]
[ext_resource path="res://Bingus Assets/graphics/cutscenefloppa.png" type="Texture" id=9]
[ext_resource path="res://Cutscenes/Cutscene1.gd" type="Script" id=10]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-5.tscn" type="PackedScene" id=11]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-7.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-6.tscn" type="PackedScene" id=13]
[ext_resource path="res://Cutscenes/TextCutscene1/TextCutscene1-8.tscn" type="PackedScene" id=14]

[node name="Cutscene1" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0509804, 0.0509804, 1 )

[node name="BingusPic" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 65.0
margin_right = 347.0
margin_bottom = 365.0
texture = ExtResource( 8 )

[node name="FloppaPic" type="TextureRect" parent="."]
margin_left = 943.0
margin_top = 410.0
margin_right = 1183.0
margin_bottom = 650.0
texture = ExtResource( 9 )

[node name="TextCutscene1-1" parent="." instance=ExtResource( 4 )]
position = Vector2( 450, 90 )

[node name="TextCutscene1-2" parent="." instance=ExtResource( 2 )]
position = Vector2( 450, 160 )

[node name="TextCutscene1-3" parent="." instance=ExtResource( 3 )]
position = Vector2( 450, 90 )

[node name="TextCutscene1-4" parent="." instance=ExtResource( 1 )]
position = Vector2( 450, 160 )

[node name="TextCutscene1-5" parent="." instance=ExtResource( 11 )]
position = Vector2( 300, 450 )

[node name="TextCutscene1-6" parent="." instance=ExtResource( 13 )]
position = Vector2( 300, 520 )

[node name="TextCutscene1-7" parent="." instance=ExtResource( 12 )]
position = Vector2( 300, 450 )

[node name="TextCutscene1-8" parent="." instance=ExtResource( 14 )]
position = Vector2( 300, 520 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
autostart = true

[node name="Fadeout" parent="." instance=ExtResource( 6 )]
margin_left = 3.0
margin_top = 2.0
margin_right = 3.0
margin_bottom = 2.0

[node name="Fadein" parent="." instance=ExtResource( 7 )]
visible = false

[node name="BingusTextDisappear" type="Timer" parent="."]
wait_time = 8.5
one_shot = true
autostart = true

[node name="FloppaTextDisappear" type="Timer" parent="."]
wait_time = 12.5
one_shot = true
autostart = true

[connection signal="timeout" from="IntroTimer" to="." method="_on_IntroTimer_timeout"]
[connection signal="timeout" from="BingusTextDisappear" to="." method="_on_BingusTextDisappear_timeout"]
[connection signal="timeout" from="FloppaTextDisappear" to="." method="_on_FloppaTextDisappear_timeout"]
